Add Login Social Google

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -19,13 +19,14 @@
         .facebook-icon i {
             color: #133783;
         }
-
+        .microsoft-icon i {
+            color:rgb(95, 145, 255);
+        }
         .github-icon i {
             color: black;
         }
     </style>
 {% endblock %}
-
 {% block body %}
     <div class="auth-flow-form">
         <form action="" method="post" class="form-area">
@@ -54,22 +55,26 @@
             <input type="hidden" name="next" value="{{ next }}">
         </form>
         <a href="{{ url('password_reset') }}">{{ _('Forgot your password?') }}</a>
-
-        {% if form.has_google_auth or form.has_facebook_auth or form.has_github_auth %}
+        {% if form.has_google_auth or form.has_facebook_auth or form.has_github_auth or form.has_microsoft_auth %}
             <h4>{{ _('Or log in with...') }}</h4>
             <div>
                 {% if form.has_google_auth %}
-                    <a href="{{ url('social:begin', "google-oauth2") }}?next={{ next }}" class="social google-icon">
+                    <a href="{{ url('social:begin', 'google-oauth2') }}" class="social google-icon">
                         <i class="fa fa-google-plus-square"></i>
                     </a>
                 {% endif %}
+                {% if form.has_microsoft_auth %}
+                    <a href="{{ url('social:begin', 'microsoft-oauth2', ) }}" class="social microsoft-icon">
+                        <i class="fa-brands fa-windows"></i> Đăng nhập bằng Microsoft
+                    </a>
+                {% endif %}
                 {% if form.has_facebook_auth %}
-                    <a href="{{ url('social:begin', "facebook") }}?next={{ next }}" class="social facebook-icon">
+                    <a href="{{ url('social:begin', 'facebook') }}?next={{ next }}" class="social facebook-icon">
                         <i class="fa fa-facebook-square"></i>
                     </a>
                 {% endif %}
                 {% if form.has_github_auth %}
-                    <a href="{{ url('social:begin', "github-secure") }}?next={{ next }}" class="social github-icon">
+                    <a href="{{ url('social:begin', 'github-secure') }}?next={{ next }}" class="social github-icon">
                         <i class="fa fa-github-square"></i>
                     </a>
                 {% endif %}
