--- a/resources/navbar.scss
+++ b/resources/navbar.scss
@@ -79,12 +79,12 @@ nav {
     left: 0;
     right: 0;
     z-index: 500;
-
+    
     ul {
         margin: 0 0 0 -5px;
         padding: 0 0 0 1%;
         display: block;
-
+        background-color: #5a5a5a;
         li {
             display: inline-block;
             color: #FFF;
