--- a/templates/blog/list.html
+++ b/templates/blog/list.html
@@ -1,3 +1,4 @@
+{# filepath: /c:/Users/Huan/Desktop/VLOJ/vloj/templates/blog/list.html #}
 {% extends "base.html" %}
 {% block title_row %}{% endblock %}
 {% block title_ruler %}{% endblock %}
@@ -41,10 +42,16 @@
     {% block before_posts %}{% endblock %}
     <div id="mobile" class="tabs">
         <ul>
-            <li id="blog-tab" class="tab active"><a href="#">
-                <i class="tab-icon fa fa-info-circle"></i> {{ _('Blog') }}
-            </a></li>
-            <li id="event-tab" class="tab"><a href="#"><i class="tab-icon fa fa-rss"></i> {{ _('Events') }}</a></li>
+            <li id="blog-tab" class="tab active">
+                <a href="#">
+                    <i class="tab-icon fa fa-info-circle"></i> {{ _('Blog') }}
+                </a>
+            </li>
+            <li id="event-tab" class="tab">
+                <a href="#">
+                    <i class="tab-icon fa fa-rss"></i> {{ _('Events') }}
+                </a>
+            </li>
         </ul>
     </div>
     <div id="blog-container">
@@ -57,18 +64,22 @@
                             <a href="{{ url('blog_post', post.id, post.slug) }}">{{ post.title }}</a>
                         </h2>
                         <span class="time">
-                            {%- if post.sticky %}<i title="Sticky" class="fa fa-star fa-fw"></i>{% endif -%}
+                            {%- if post.sticky %}
+                                <i title="Sticky" class="fa fa-star fa-fw"></i>
+                            {% endif -%}
                             {% with authors=post.authors.all() %}
-                                {%- if authors -%}
+                                {%- if authors %}
                                     <span class="post-authors">{{ link_users(authors) }}</span>
-                                {%- endif -%}
+                                {%- endif %}
                             {% endwith %}
                             {% with abs=_('posted on {time}'), rel=_('posted {time}') %}
                                 {{ relative_time(post.publish_on, abs=abs, rel=rel) }}
                             {% endwith %}
-                        </span><span class="comment-data">
+                        </span>
+                        <span class="comment-data">
                             <a href="{{ url('blog_post', post.id, post.slug) }}#comments" class="comment-count-link">
-                                <i class="fa fa-comments comment-icon"></i><span class="comment-count">
+                                <i class="fa fa-comments comment-icon"></i>
+                                <span class="comment-count">
                                     {{- post_comment_counts[post.id] or 0 -}}
                                 </span>
                             </a>
@@ -84,8 +95,10 @@
                     </section>
                 {% endfor %}
             </div>
-            {% if page_obj.has_other_pages() %}
-                <div class="bottom-pagination-bar">{% include "list-pages.html" %}</div>
+            {% if page_obj.has_other_pages %}
+                <div class="bottom-pagination-bar">
+                    {% include "list-pages.html" %}
+                </div>
             {% endif %}
         </div>
 
@@ -98,8 +111,7 @@
                             <ul>
                                 {% for clarification in clarifications %}
                                     <li class="clarification">
-                                        <a href="{{ url('problem_detail', clarification.problem.code) }}"
-                                           class="problem">
+                                        <a href="{{ url('problem_detail', clarification.problem.code) }}" class="problem">
                                             {{ clarification.problem.name }}
                                         </a>
                                         <span class="time">{{ relative_time(clarification.date) }}</span>
@@ -131,7 +143,6 @@
                     </div>
                 </div>
             {% endif %}
-
             {% if future_contests %}
                 <div class="blog-sidebox sidebox">
                     <h3>{{ _('Upcoming contests') }} <i class="fa fa-trophy"></i></h3>
@@ -171,8 +182,7 @@
                 </div>
             </div>
             <div class="blog-sidebox sidebox">
-                <h3>{{ _('New problems') }} <i class="fa fa-puzzle-piece"></i>
-                </h3>
+                <h3>{{ _('New problems') }} <i class="fa fa-puzzle-piece"></i></h3>
                 <div class="sidebox-content">
                     <ul class="problem-list">
                         {% for problem in new_problems %}
@@ -204,7 +214,6 @@
                     </div>
                 </div>
             {% endif %}
-
             {% if perms.judge.test_site and open_tickets %}
                 <div class="blog-sidebox sidebox">
                     <h3>{{ _('New tickets') }} <i class="fa fa-exclamation-circle"></i></h3>
@@ -224,6 +233,14 @@
                     </div>
                 </div>
             {% endif %}
+
+            {# Thêm sidebox cho Discord Widget #}
+            <div class="blog-sidebox sidebox">
+                <h3>Discord</h3>
+                <div class="sidebox-content">
+                    <iframe src="https://discord.com/widget?id=1346541660661616772&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+                </div>
+            </div>
         </div>
     </div>
     {% block after_posts %}{% endblock %}
