--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,5 +1,5 @@
 <div style="border:2px solid #fd0;margin:4px 0;"><div style="background:#000;border:6px solid #000;">
-<a href="{{ protocol }}://{{ domain }}"><img src="{{ protocol }}://{{ domain }}/static/icons/logo.svg" alt="{{ site_name }}" width="160" height="44"></a>
+<a href="https://aa26-2405-4803-d756-c2e0-60af-b937-3685-5e0.ngrok-free.app/"><img src="{{ protocol }}://{{ domain }}/static/icons/logo.svg" alt="{{ site_name }}" width="160" height="44"></a>
 </div></div>
 
 <div style="border:2px solid #337ab7;margin:4px 0;"><div style="background:#fafafa;border:12px solid #fafafa;font-family:segoe ui,lucida grande,Arial,sans-serif;font-size:14px;">
@@ -7,7 +7,7 @@
 <br><br>
 {{ _('To reset the password for your account "%(username)s", click the link below.', username=user.get_username()) }}
 <br><br>
-<a href="{{ protocol }}://{{ domain }}{{ url('password_reset_confirm', uidb64=uid, token=token) }}">{{ protocol }}://{{ domain }}{{ url('password_reset_confirm', uidb64=uid, token=token) }}</a>
+<a href="https://aa26-2405-4803-d756-c2e0-60af-b937-3685-5e0.ngrok-free.app/{{ url('password_reset_confirm', uidb64=uid, token=token) }}">{{ protocol }}://{{ domain }}{{ url('password_reset_confirm', uidb64=uid, token=token) }}</a>
 <br><br>
 {% if site_admin_email %}
 {% with link='<a href="mailto:%(email)s">%(email)s</a>'|safe|format(email=site_admin_email) %}
