--- a/templates/base.html
+++ b/templates/base.html
@@ -305,6 +305,7 @@
     <footer>
         <span id="footer-content">
             <br>
+            <!--<h5>Powered by DMOJ</h5>-->
             <a style="color: #808080" href="https://dmoj.ca">{{ _('')|markdown('default', strip_paragraphs=True) }}</a> |
             {% if misc_config.footer %}
                 {{ misc_config.footer|safe }} |
