--- a/templates/blog/list.html
+++ b/templates/blog/list.html
@@ -238,7 +238,13 @@
             <div class="blog-sidebox sidebox">
                 <h3>Discord</h3>
                 <div class="sidebox-content">
-                    <iframe src="https://discord.com/widget?id=1346541660661616772&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+                    <iframe src="https://discord.com/widget?id=1346541660661616772&theme=dark" 
+                            width="350" 
+                            height="500" 
+                            allowtransparency="true" 
+                            frameborder="0" 
+                            sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts allow-forms">
+                    </iframe>
                 </div>
             </div>
         </div>
