--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -187,7 +187,7 @@
                     </a>
                 {% endif %}
                 {% if form.has_microsoft_auth %}
-                    <a href="{{ url('social:begin', 'azuread-oauth2') }}" class="social microsoft-icon">
+                    <a href="{{ url('social:begin', 'azuread-tenant-oauth2') }}" class="social microsoft-icon">
                         <i class="fa fa-windows"></i>
                     </a>
                 {% endif %}
